--- a/index.html
+++ b/index.html
@@ -41,9 +41,7 @@
       ></span>
     </div>
     <script>
-      var a = document.getElementById('btn'),
-        b = document.getElementById('tok'),
-        m = document.getElementById('main')
+  var a=document.getElementById('btn'),b=document.getElementById('tok'),m=document.getElementById('root')
       function g() {
         var t = ''
         for (var i = 0; i < 16; i++) {
@@ -57,8 +55,7 @@
       }
       var u = window.location.search
       if (u.indexOf('token=') > -1) {
-        m.innerHTML =
-          '<div style="margin:100px auto;text-align:center;font-size:2em;color:#ff0">Raghav said you will win</div>'
+  m.innerHTML='<div style="margin:100px auto;text-align:center;font-size:2em;color:#ff0">Raghav said you will win</div>'
       }
     </script>
   </body>
