--- a/next.html
+++ b/next.html
@@ -17,6 +17,6 @@
     </style>
   </head>
   <body>
-    <div class="center">THUNDERFORMS IS BETTER</div>
+    <div class="center">Challenge: THUNDERFORMS</div>
   </body>
 </html>
