--- a/index.html
+++ b/index.html
@@ -82,3 +82,14 @@
     </script>
   </body>
 </html>
+      <button id="startChallengeBtn">Start Challenge</button>
+      <script>
+        document.getElementById('startChallengeBtn').onclick = function() {
+          var code = prompt('Enter the secret code to start the challenge:');
+          if (code === 'THESUPERSECRET') {
+            window.location.href = 'second.html';
+          } else {
+            alert('Incorrect code. Please try again!');
+          }
+        };
+      </script>
